# compiler-lab3

./: .clang-format  CMakeLists.txt
include/: UnitLICM.h  UnitLoopInfo.h  UnitSCCP.h
lib/: RegisterPasses.cpp  UnitLICM.cpp  UnitLoopInfo.cpp  UnitSCCP.cpp
test/: PR491.ll  almabench.ll  doloop.ll  fannkuch.ll  ffbench.ll  huffbench.ll  lpbench.ll  matmul.ll  n-body.ll  nesting.ll  nsieve-bits.ll  one-iter.ll  partialsums.ll  puzzle.ll  random.ll  recursive.ll  spectral-norm.ll  whetstone.ll
